--- a/component/ja/first.html
+++ b/component/ja/first.html
@@ -3,7 +3,7 @@
     <div class="logo">
       <div class="icon"></div>
       <div class="appName">もにゃ</div>
-      <div class="label">The easiest Monacoin Wallet</div>
+      <div class="label">The easiest Cryptocurrency Wallet</div>
       <div class="buttons">
         <v-ons-button @click="start">Start!</v-ons-button>
       </div>
