--- a/component/ja/invoice.html
+++ b/component/ja/invoice.html
@@ -33,9 +33,9 @@
       <v-ons-list>
         
         <v-ons-list-item v-show="currencyIndex===-1">
-          <div class="center">送金先Monappy ID</div>
+          <div class="center">送金先MonaHappy ID</div>
           <div class="right">
-            <span class="atmark">@</span><v-ons-input v-model="monappyDestination" placeholder="Monappy ID" @change="changeMonappy" @input="monappyNotExist=false;" :class="{monappyNotExist:monappyNotExist}"></v-ons-input>
+            <span class="atmark">@</span><v-ons-input v-model="monappyDestination" placeholder="MonaHappy ID" @change="changeMonappy" @input="monappyNotExist=false;" :class="{monappyNotExist:monappyNotExist}"></v-ons-input>
           </div>
         </v-ons-list-item>
         <v-ons-list-item v-show="currencyIndex!==-1">
