Deleted donation that is not approved

--- a/component/ja/about.html
+++ b/component/ja/about.html
@@ -11,7 +11,7 @@
       <v-ons-list-item modifier="small">
         <v-ons-row>
           <v-ons-col>
-            <v-ons-button modifier="large quiet" @click="donateMe">モナで寄付</v-ons-button>
+            <v-ons-button modifier="large quiet" @click="donateMe">M◯nac◯inで寄付</v-ons-button>
           </v-ons-col>
           <v-ons-col>
             <v-ons-button modifier="large quiet" @click="donateMeWithTwitter">Twitterで寄付</v-ons-button>
@@ -20,10 +20,7 @@
             <v-ons-button modifier="large quiet" @click="donateMeWithMonappy">Monappyで寄付</v-ons-button>
           </v-ons-col>
           <v-ons-col>
-            <v-ons-button modifier="large quiet" @click="donateMeWithZNY">ゼニで寄付</v-ons-button>
-          </v-ons-col>
-          <v-ons-col>
-            <v-ons-button modifier="large quiet" @click="donateMeWithBTC">ビットコインで寄付</v-ons-button>
+            <v-ons-button modifier="large quiet" @click="donateMeWithBTC">B1TC◯1|\|で寄付</v-ons-button>
           </v-ons-col>
         </v-ons-row>
       </v-ons-list-item>
