--- a/component/ja/about.html
+++ b/component/ja/about.html
@@ -1,29 +1,14 @@
 <v-ons-page data-page="about">
   <custom-bar title="このアプリについて" menu="true"></custom-bar>
   <div>
-    <h1>もにゃ</h1>
+    <h1>もにゃ(iOS版)</h1>
     <v-ons-list>
       <v-ons-list-item modifier="chevron tappable" @click="goToTwitter('monya_wallet')">
         <div class="center">作った人</div>
         <div class="right">もにゃ 開発チーム</div>
       </v-ons-list-item>
       <v-ons-list-item modifier="small">寄付をいただければ泣いて喜びます</v-ons-list-item>
-      <v-ons-list-item modifier="small">
-        <v-ons-row>
-          <v-ons-col>
-            <v-ons-button modifier="large quiet" @click="donateMe">M◯nac◯inで寄付</v-ons-button>
-          </v-ons-col>
-          <v-ons-col>
-            <v-ons-button modifier="large quiet" @click="donateMeWithTwitter">Twitterで寄付</v-ons-button>
-          </v-ons-col>
-          <v-ons-col>
-            <v-ons-button modifier="large quiet" @click="donateMeWithMonappy">Monappyで寄付</v-ons-button>
-          </v-ons-col>
-          <v-ons-col>
-            <v-ons-button modifier="large quiet" @click="donateMeWithBTC">B1TC◯1|\|で寄付</v-ons-button>
-          </v-ons-col>
-        </v-ons-row>
-      </v-ons-list-item>
+      
       
       <v-ons-list-header>バックエンドをお借りした方々(敬称略)</v-ons-list-header>
       <v-ons-list-item modifier="chevron tappable" @click="goToTwitter('cryptcoinjunkey')">
